// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceTemplate component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="scalesignif-author-0"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
        
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="scale-item-0"
        id="scale-item-0"
      >
        Missing
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-b1im03-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="statement-item-0"
        id="statement-item-0"
      />
    </div>
  </div>
</div>
`;

exports[`ScaleOfSignificanceTemplate component should render with author name 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="scalesignif-author-0"
        style="color: rgba(0, 0, 0, 0.5);"
      >
        First
         listed author 
        (Joe Smith)
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="scale-item-0"
        id="scale-item-0"
      >
        Minor
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-b1im03-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        data-testid="statement-item-0"
        id="statement-item-0"
      >
        <p>
          A creative statement
        </p>
      </span>
    </div>
  </div>
</div>
`;
